Fix keyboard_shortcut_viewer crash on close

Fixes a regression where closing the keyboard_shortcut_viewer service's
window leads to a crash.

Bug: 911758
Change-Id: I06c2ea0bb272d940e5ed008ac90877cf50d12242
Reviewed-on: https://chromium-review.googlesource.com/c/1362012
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/master@{#613872}
Former-commit-id: e74c1a868765ff9b8441d2fef5aa1831b2081eba